manifests/add-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: add
  template:
    metadata:
      labels:
        app: add
    spec:
      serviceAccountName: go-micro
      containers:
        - name: add
          image: jianjustin/add:latest
          ports:
            - containerPort: 60003
---
apiVersion: v1
kind: Service
metadata:
  name: add-service
spec:
  type: ClusterIP
  selector:
    app: add
  ports:
    - protocol: TCP
      port: 80
      targetPort: 60003
