manifests/mul-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mul-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mul
  template:
    metadata:
      labels:
        app: mul
    spec:
      serviceAccountName: go-micro
      containers:
        - name: mul
          image: jianjustin/mul:latest
          ports:
            - containerPort: 60001
---
apiVersion: v1
kind: Service
metadata:
  name: mul-service
spec:
  type: ClusterIP
  selector:
    app: mul
  ports:
    - protocol: TCP
      port: 80
      targetPort: 60001
