manifests/sub-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sub-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sub
  template:
    metadata:
      labels:
        app: sub
    spec:
      containers:
        - name: sub
          image: jianjustin/sub:latest
          ports:
            - containerPort: 60002
---
apiVersion: v1
kind: Service
metadata:
  name: sub-service
spec:
  type: ClusterIP
  selector:
    app: sub
  ports:
    - protocol: TCP
      port: 80
      targetPort: 60002
